# skinning-NURBS-surface

./: .gitignore  CMakeLists.txt  readme.md  test_cases.json
include/: AppPaths.h  AxisOverlay.h  Camera.h  CurveDebugRender.h  CurveRender.h  GLProgram.h  GeometryDebugUtils.h  LoftSceneBuilder.h  MathUtils.h  NormalRender.h  ProjectRoot.h  RulerOverlay.h  ScreenProjector.h  SettingsPanel.h  SurfaceDebugRender.h  SurfaceRender.h  TestCaseLoader.h  TestCaseSelector.h  ViewGizmo.h  globalInterpolation.h  mynurbs.h
src/: AxisOverlay.cpp  Camera.cpp  CurveDebugRender.cpp  CurveRender.cpp  DerivateRender.cpp  GLProgram.cpp  GeometryDebugUtils.cpp  LoftSceneBuilder.cpp  MathUtils.cpp  MeshRender.cpp  NormalRender.cpp  ProjectRoot.cpp  RulerOverlay.cpp  ScreenProjector.cpp  SettingsPanel.cpp  Shader.cpp  SurfaceDebugRender.cpp  SurfaceRender.cpp  TestCaseLoader.cpp  TestCaseSelector.cpp  ViewGizmo.cpp  imgui.ini  main.cpp
